--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ code {
 
 @import "@bigbinary/neetoui";
 @import "react-toastify/dist/ReactToastify.min.css";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
